# pre-commit-hooks

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.rst  pyproject.toml  tox.ini
src/hooks/: asciidoc.py  check_code_block_syntax.py  common.py  markdown.py  restructuredtext.py  verify_consistent_pyproject_toml_python_requirements.py
src/hooks/syntax/: json_.py  python_.py
tests/: test_check_code_block_syntax.py
tests/files/asciidoc/: bad-syntax-noqa-syntax.adoc  bad-syntax-noqa.adoc  bad-syntax.adoc  listing-with-source-language.adoc  listing-without-source-language.adoc  nested-code-block.adoc  source-explicit-blank-lines.adoc  source-explicit-listing.adoc  source-explicit-no-dashes.adoc  source-implicit-no-dashes.adoc
tests/files/markdown/: bad-syntax-noqa-syntax.md  bad-syntax-noqa.md  bad-syntax.md  basic-no-syntax.md  fenced-backticks-longer-close.md  fenced-backticks.md  fenced-tildes-longer-close.md  fenced-tildes.md  nested-code-block.md
tests/files/restructuredtext/: bad-syntax-noqa-syntax.rst  bad-syntax-noqa.rst  bad-syntax.rst  code-block-override-highlight.rst  code-block-with-blank-lines.rst  code-block-with-highlight.rst  code-block-with-syntax.rst  code-block-without-syntax.rst  literal-block-with-highlight.rst  literal-block-without-highlight.rst  nested-code-block.rst
