[tool.poetry]
name = "pre-commit-hooks"
version = "0.1.0"
description = "Pre-commit hooks that help me"
authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "MIT"
readme = "README.rst"
packages = [{include = "hooks", from = "src"}]

[tool.poetry.scripts]
verify-consistent-pyproject-toml-python-requirements = "hooks.verify_consistent_pyproject_toml_python_requirements:main"

[tool.poetry.dependencies]
python = ">=3.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
