[project]
name = "pre-commit-hooks"
version = "0.1.1"
description = "Pre-commit hooks that help me"
authors = [
    { name = "Kurt McKee", email = "contactme@kurtmckee.org" },
]
license = "MIT"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "tomli ; python_version < '3.11'",
]

[project.scripts]
verify-consistent-pyproject-toml-python-requirements = "hooks.verify_consistent_pyproject_toml_python_requirements:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# poetry
# ------

[tool.poetry]
packages = [{include = "hooks", from = "src"}]
